// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateFFmpegCommand > generates basic input-output-global chain 1`] = `
{
  "error": null,
  "result": "import ffmpeg
result = ffmpeg.input('input.mp4').output(filename='output.mp4').global_args()",
}
`;

exports[`generateFFmpegCommand > generates code with filter nodes, output and global node 1`] = `
{
  "error": "'NoneType' object has no attribute 'node'",
  "result": "# Error: 'NoneType' object has no attribute 'node'",
}
`;

exports[`generateFFmpegCommand > handles complex filter chains with outputs to global node 1`] = `
{
  "error": "'NoneType' object has no attribute 'node'",
  "result": "# Error: 'NoneType' object has no attribute 'node'",
}
`;

exports[`generateFFmpegCommand > handles disconnected nodes with global node 1`] = `
{
  "error": "tuple index out of range",
  "result": "# Error: tuple index out of range",
}
`;

exports[`generateFFmpegCommand > handles empty result from Python execution 1`] = `
{
  "error": "tuple index out of range",
  "result": "# Error: tuple index out of range",
}
`;

exports[`generateFFmpegCommand > handles multiple input nodes and outputs to global node 1`] = `
{
  "error": null,
  "result": "import ffmpeg
result = ffmpeg.output(ffmpeg.input('input1.mp4'), ffmpeg.input('input2.mp4'), filename='output.mp4').global_args()",
}
`;

exports[`generateFFmpegCommand > handles numeric and boolean parameters correctly with outputs to global node 1`] = `
{
  "error": "'NoneType' object has no attribute 'node'",
  "result": "# Error: 'NoneType' object has no attribute 'node'",
}
`;

exports[`generateFFmpegCommand > returns error message if no input or output nodes 1`] = `
{
  "error": "tuple index out of range",
  "result": "# Error: tuple index out of range",
}
`;
